--- a/index.html
+++ b/index.html
@@ -1,136 +1,15 @@
-<!DOCTYPE html><html lang="es">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Malla Interactiva Arquitectura</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      padding: 2rem;
-    }
-    .semestre {
-      margin-bottom: 2rem;
-    }
-    .semestre h2 {
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #ccc;
-    }
-    .ramo {
-      display: inline-block;
-      padding: 1rem;
-      margin: 0.5rem;
-      border-radius: 8px;
-      color: white;
-      font-weight: bold;
-      min-width: 180px;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <h1>Malla Interactiva Arquitectura</h1>
-  <div id="contenedor"></div>  <script>
-    const malla = {
-      "I": [
-        "Matemática aplicada para arquitectura I",
-        "Representación arquitectónica",
-        "Historia y Teoría de la Arquitectura I",
-        "Comprensión Lectora en Arquitectura",
-        "Taller de Arquitectura I: Introducción al Diseño",
-        "Inglés I"
-      ],
-      "II": [
-        "Matemática aplicada para arquitectura II",
-        "Geometría y Representación I",
-        "Historia y Teoría de la Arquitectura II",
-        "Taller de Arquitectura II",
-        "Inglés II"
-      ],
-      "III": [
-        "Urbanismo I",
-        "Geometría y Representación II",
-        "Estructura I",
-        "Taller de Arquitectura III",
-        "Inglés III"
-      ],
-      "IV": [
-        "Urbanismo II",
-        "Modelación Digital para Arquitectos",
-        "Estructura II",
-        "Expresión Oral en Arquitectura",
-        "Taller de Arquitectura IV"
-      ],
-      "V": [
-        "Urbanismo III",
-        "BIM / Modelación",
-        "Estructura III",
-        "Taller de Arquitectura V",
-        "Introducción a la Fe"
-      ],
-      "VI": [
-        "Sistemas Constructivos I",
-        "BIM / Revisión",
-        "Topografía",
-        "Tecnología en Diseño y Materialización",
-        "Taller de Arquitectura VI",
-        "Ética Cristiana"
-      ],
-      "VII": [
-        "Sistemas Constructivos II",
-        "BIM / Coordinación",
-        "Edificio y Entorno I",
-        "Metodología de la Investigación",
-        "Taller de Arquitectura VII"
-      ],
-      "VIII": [
-        "Sistemas Constructivos III",
-        "BIM / Dirección y Gestión",
-        "Edificio y Entorno II",
-        "Taller de Arquitectura VIII",
-        "Certificación I"
-      ],
-      "IX": [
-        "Electivo I",
-        "Eficiencia Energética",
-        "Arquitectura Sustentable I",
-        "Gestión de Proyectos",
-        "Taller de Arquitectura IX",
-        "Certificación II"
-      ],
-      "X": [
-        "Electivo II",
-        "Normativa en Proyectos de Arquitectura",
-        "Arquitectura Sustentable II",
-        "Formulación y Evaluación de Proyectos",
-        "Taller de Arquitectura X",
-        "Certificación III"
-      ],
-      "XI": [
-        "Electivo III",
-        "Taller de Titulación - Módulo Integrador Profesional"
-      ]
-    };
-
-    function colorAleatorio() {
-      const h = Math.floor(Math.random() * 360);
-      return hsl(${h}, 70%, 60%);
-    }
-
-    const contenedor = document.getElementById("contenedor");
-
-    Object.entries(malla).forEach(([semestre, ramos]) => {
-      const divSemestre = document.createElement("div");
-      divSemestre.className = "semestre";
-      divSemestre.innerHTML = <h2>Semestre ${semestre}</h2>;
-      ramos.forEach(ramo => {
-        const divRamo = document.createElement("div");
-        divRamo.className = "ramo";
-        divRamo.style.backgroundColor = colorAleatorio();
-        divRamo.textContent = ramo;
-        divSemestre.appendChild(divRamo);
-      });
-      contenedor.appendChild(divSemestre);
-    });
-  </script></body>
+  <div id="contenedor"></div>
+  <script src="script.js"></script>
+</body>
 </html>
+
